--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -12,6 +12,7 @@
         android:id="@+id/question_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="@dimen/abc_text_size_medium_material" />
 
 </LinearLayout>
