--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -31,8 +31,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/description"
-                    android:id="@+id/textView7" />
+                    android:text="New Text"
+                    android:id="@+id/questionnaire_details_title" />
 
                 <TextView
                     android:layout_width="wrap_content"
