--- a/app/src/main/res/layout/fragment_questionnaires.xml
+++ b/app/src/main/res/layout/fragment_questionnaires.xml
@@ -51,4 +51,18 @@
 
     </com.github.clans.fab.FloatingActionMenu>
 
+    <TextView
+        android:id="@+id/emptyQuestionnaires"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/questionnaires_empty"
+        android:autoLink="all"
+        android:textAlignment="center"
+        android:layout_above="@+id/fab_menu"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="19dp"
+        android:visibility="gone"
+        android:layout_marginStart="19dp" />
+
 </RelativeLayout>
