--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/upload_queue_empty"
+                android:textAlignment="center"
                 android:visibility="gone" />
 
         </RelativeLayout>
