--- a/app/src/main/res/layout/fragment_questionnaires_row.xml
+++ b/app/src/main/res/layout/fragment_questionnaires_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="88dp"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -12,8 +12,24 @@
         android:id="@+id/qs_row_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textStyle="bold" />
+        android:text="Example title"
+        android:textSize="16sp"
+        android:textColor="#222"
+        android:textStyle="" />
+
+    <TextView
+        android:id="@+id/qs_row_owner_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/qs_row_title"
+        android:layout_gravity="end"
+        android:text="Natural England"
+        android:scrollHorizontally="false"
+        android:ellipsize="end"
+        android:textColor="#222"
+        android:maxLines="1" />
 
     <TextView
         android:id="@+id/qs_row_description"
@@ -21,10 +37,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/qs_row_title"
+        android:layout_below="@+id/qs_row_owner_name"
         android:layout_gravity="end"
-        android:text=""
-        android:scrollHorizontally="true"
+        android:text="Sample subtitle. A bit longer than the first. Maybe even longer than that. A real long bit of text. Will it wrap?"
+        android:scrollHorizontally="false"
         android:ellipsize="end"
         android:maxLines="1" />
 
