--- a/app/src/main/res/layout/fragment_sections_page1.xml
+++ b/app/src/main/res/layout/fragment_sections_page1.xml
@@ -85,6 +85,7 @@
                 android:text="@string/new_landscape_take_photo_button"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_below="@+id/page1_intro_location"/>
         </RelativeLayout>
     </ScrollView>
